# continuum

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_AUDIT.md  CLEANUP_REPORT.md  CONTEXT.md  GEMINI.md  HANDOFF.md  Makefile  README.md  REFACTOR_REPORT.md  SETUP.md  autofill.html  index.html  loc-after.txt  loc-before.txt  loc-diff-by-file.txt  omnibar.html  package-lock.json  package.json  vite.config.ts
docs/: mcp.md  (+9 more)
src-tauri/: .env.example  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/bundled-models/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/examples/: continuum_diagnostic.rs
src-tauri/sidecars/: agent_runner.py  orpheus_tts_runner.py  parakeet_runner.py  whisper_gguf_runner.py
src-tauri/src/: config.rs  downloads.rs  http_util.rs  lib.rs  main.rs  memory_compaction.rs  memory_embedding_document.rs  memory_quality.rs  models.rs  speech.rs  system_resources.rs
src-tauri/src/accessibility/: mod.rs
src-tauri/src/agent/: actions.rs  approvals.rs  audit.rs  context.rs  evals.rs  execution.rs  mod.rs  policy.rs  prompts.rs  skills.rs
src-tauri/src/api/: commands.rs  onboarding.rs
src-tauri/src/capture/: admission.rs  clipboard.rs  entity_extractor.rs  macos.rs  mod.rs  permissions.rs  text_cleanup.rs
src-tauri/src/cloud/: auth.rs  clusters.rs  config.rs  dedup.rs  descriptor.rs  embed.rs  manual_sync.rs  mod.rs  query.rs  session.rs  share_policy.rs  sync.rs  types.rs
src-tauri/src/companion/: auth.rs  device_registry.rs  dto.rs  errors.rs  mod.rs  pairing.rs
src-tauri/src/context_runtime/: chunk_route.rs  composer.rs  context_pack.rs  entity_route.rs  evidence_pack.rs  fusion.rs  graph_plan.rs  graph_route.rs  keyword_route.rs  mod.rs  query_plan.rs  retrieval_routes.rs  vector_route.rs  verifier.rs
src-tauri/src/embed/: embedding_gemma.rs  mod.rs
src-tauri/src/embedding/: chunking.rs  clip_vision.rs  mod.rs  onnx.rs  prefixes.rs
src-tauri/src/evals/: memory_quality.rs  mod.rs
src-tauri/src/graph/: integration_test.rs  legacy.rs  mod.rs  pathfinding.rs  projection.rs  projection_commands.rs  projection_privacy.rs  projection_scoring.rs  types.rs
src-tauri/src/inference/: image_semantics.rs  mod.rs  model_config.rs  model_worker.rs  qwen_vl_memory.rs  vlm.rs  vlm_router.rs
src-tauri/src/ipc/: cloud.rs  mod.rs  onboarding.rs
src-tauri/src/mcp/: mod.rs  tls.rs  token.rs
src-tauri/src/meeting/: mod.rs
src-tauri/src/memory/: distill.rs  embed_doc.rs  reopen.rs  types.rs  validate.rs
src-tauri/src/memory_insight/: derive.rs  embedding_text.rs  fluff.rs
src-tauri/src/memory_review/: backfill.rs  daily.rs  inference_provider.rs  mod.rs  pipeline.rs  queue.rs  worker.rs
src-tauri/src/ocr/: mod.rs  vision.rs
src-tauri/src/privacy/: blocklist.rs  safety_gate.rs
src-tauri/src/search/: hybrid.rs  memory_cards.rs  mod.rs  query_processor.rs  reranker.rs
src-tauri/src/storage/: graph_store.rs  mod.rs  schema.rs  state_store.rs
src-tauri/src/store/: lance_store.rs  mod.rs
src-tauri/src/summariser/: display_summary.rs  narration_filter.rs
src-tauri/src/tasks/: extract_from_memory.rs  mod.rs
src-tauri/src/telemetry/: logging.rs  mod.rs  quality_logger.rs  runtime_metrics.rs  system_metrics.rs
src-tauri/tests/: agent_regression.rs  anti_overfitting.rs  chunk_retrieval_quality.rs  end_to_end_continuum_query.rs  end_to_end_fndr_query.rs  memory_browse.rs  query_plan_rules.rs  retrieval_routes.rs  search_flow.rs  search_relevance_eval.rs  store_graph_regressions.rs
(+431 files in other folders)
